# Mail-de-Calen

./: .gitignore  Dockerfile  FIREBASE_SETUP.md  GMAIL_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh  start_backend.sh  tatus
backend/: .env.example  .gitignore  EMAIL_DATA_FORMAT.md  GEMINI_API_SETUP.md  GMAIL_API_SETUP.md  GMAIL_OAUTH_FIX.md  README_GMAIL_SETUP.md  __init__.py  create_test_data.py  create_test_data_haruto.py  database.py  main.py  migration.py  models.py  test_server.py  update_test_data.py
backend/api/: main.py
backend/api/v1/: email.py  todo.py
backend/databases/: crud.py  model.py  schema.py
backend/routers/: __init__.py  auth.py  calendar.py  candidates.py  email.py  oauth.py  polling.py  todos.py
backend/services/: __init__.py  email_analyzer.py  firebase_email_service.py  firebase_service.py  gemini_service.py  gmail_service.py
frontend/: env.local  env.local.example  next.config.ts  package-lock.json  package.json  temp_config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/(Dashboard)/: layout.tsx  page.tsx
frontend/app/api-test/: page.tsx
frontend/app/login/: page.tsx
frontend/components/AllCalendar/: AllCalendar.tsx
frontend/components/ToDO/: ToDo.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useApi.ts  useAuth.ts  useFirestore.ts  useSettings.ts
frontend/lib/: api.ts  firebase.ts
postman/: Mail-de-Calen-Environment.postman_environment.json  README.md  environment-template.json  team-member-setup.md  team-setup.md  test-scripts.js
(+9 files in other folders)
