[project]
name = "mail-de-calen"
version = "1.0.0"
description = "AIアシスタント「Mail de Calen」- メールから予定とタスクを自動抽出するスケジュール管理アプリ"
requires-python = ">=3.9"
dependencies = [
    # FastAPI バックエンド
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    
    # Firebase連携
    "firebase-admin>=6.2.0",
    
    # Google API連携
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.108.0",
    "google-generativeai>=0.3.0",
    
    # 日時処理
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
